--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -2,13 +2,14 @@
 % da compilare con il comando pdflatex Esterni/Piano_di_progetto/Piano_di_progetto_v_x.x.x.tex
 
 \input{../../util/hx-ambiente}
-\version{0.0.5}
+\version{1.0.0}
 \creaz{25 dicembre 2016}
 \author{\LB, \PB}
 \supervisor{\GG, \MM}
 \uso{esterno}
 \dest{\TV, \ZU}
 \title{Piano di progetto}
+\date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
