--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_0_0_1.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_0_0_1.tex
@@ -1,18 +1,16 @@
-% Studio di Fattibilita
+% Studio di Fattibilità
 % da compilare con il comando pdflatex Studio_di_Fattibilita_x.x.x.tex
 
 \input{../../util/hx-ambiente}
 
-\version{0.0.1}
+\version{1.0.0}
 \creaz{20 dicembre 2016}
 \author{\AZ}
 \supervisor{\LS}
 \uso{interno}
 \dest{\TV, \RC}
 \title{Studio di Fattibilità}
-
-\usepackage{hyperref}
-\hypersetup{hidelinks}
+\date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
