--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -3,13 +3,14 @@
 
 \input{../../util/hx-ambiente}
 
-\version{0.0.1}
+\version{1.0.0}
 \creaz{28 dicembre 2016}
 \author{\LS, \AZ}
 \supervisor{\GG}
 \uso{esterno}
 \dest{\TV, \ZU}
 \title{Piano di Qualifica}
+\date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
