tolti termini non in glossario

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -596,11 +596,11 @@ Di seguito si riporta il costo della #1.
 \subsubsection{Costo \AR}
 	
 \introcosto{\AR}
-Questo costo viene fornito a scopo informativo e rappresenta l'investimento effettuato da {\hx} prima dell'aggiudicazione dell'appalto e perciò tale periodo \textbf{non è a carico del cliente}. 
+Questo costo viene fornito a scopo informativo e rappresenta l'investimento effettuato da \hx{} prima dell'aggiudicazione dell'appalto e perciò tale periodo \textbf{non è a carico del cliente}. 
 
 Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{itemize}
-\item {\AMx} a causa dell'impegno aggiuntivo dedicato alla creazione di un proprio \gloss{Way of Working};
+\item {\AMx} a causa dell'impegno aggiuntivo dedicato alla creazione di un proprio \emph{way of working};
 \item {\ANx} per gli sforzi impiegati a raggiungere una comprensione profonda dei requisiti del progetto affrontato.
 \end{itemize}
 
