immagini incluse per ar, incluso appendice

--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -15,6 +15,7 @@
 \usepackage{fancyhdr}
 \usepackage[table]{xcolor}
 \usepackage{longtable}
+\usepackage{grffile}
 \usepackage{hyperref}
 \hypersetup{hidelinks}
 
