inserito riferimenti a nuove immagini

--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
@@ -1037,6 +1037,7 @@ l'attore modifica il nome del metodo.
 
 \subparagraph{UC4.11.4.3: Modifica Parametro Metodo}
 \label{UC4.11.4.3}
+\myimg{UC4.11.4.3 - Modifica Parametro Metodo}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
 \item \textbf{Descrizione}: l'attore modifica un parametro del metodo;	
@@ -2086,6 +2087,7 @@ l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.2.3.1);
 %\item l'attore può modificare un blocco if/else (UC5.22);
 \subsubsection{UC5.22: Modifica Blocco If/Else}
 \label{UC5.22}
+\myimg{UC5.22 - Modifica Blocco If_Else}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
 \item \textbf{Descrizione}: l'attore può modificare il blocco if/else selezionato per la modifica;
@@ -2141,6 +2143,7 @@ l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.3.5.1);
 %\item l'attore può modificare un blocco while (UC5.23);
 \subsubsection{UC5.23: Modifica Blocco While}
 \label{UC5.23}
+\myimg{UC5.23 - Modifica Blocco While}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
 \item \textbf{Descrizione}: l'attore può modificare il blocco while selezionato per la modifica;
@@ -2194,6 +2197,7 @@ l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.4.4.1);
 %\item l'attore può modificare un blocco for (UC5.24);
 \subsubsection{UC5.24: Modifica Blocco For}
 \label{UC5.24}
+\myimg{UC5.24 - Modifica Blocco For}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
 \item \textbf{Descrizione}: l'attore può modificare il blocco for selezionato per la modifica;
@@ -2274,6 +2278,7 @@ l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.5.6.1);
 %\item l'attore può modificare un blocco custom (UC5.25).
 \subsubsection{UC5.25: Modifica Blocco Custom}
 \label{UC5.25}
+\myimg{UC5.25 - Modifica Blocco Custom}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
 \item \textbf{Descrizione}: l'attore può modificare il blocco custom selezionato per la modifica;
